@@ -1,3 +1,8 @@
+2005-10-17  Matthew Allum  <mallum@openedhand.com>
+
+	* mbinputmgr.c: (selected_method_load), (mbinpmgr_init):
+	Deal with Zombies.
+
 2005-05-23  mallum,,,  <mallum@openedhand.com>
 
 	* mbinputmgr-tray.c: (button_callback), (xevent_callback):
